# UbiquiTimes-Cardiac

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  Shuttle.toml  memo.md
.github/workflows/: shuttle_deploy.yml  test.yml  test_action.yml
.sqlx/: query-131fbc5c6b1f688edbfe2aefb1e4836bdbfbb3144e9a97d156b0bead87b34fa1.json  query-17ff60eeaf5e04336693993695bae682e46ab3b2ed012921a479d44e80b84268.json  query-5e41b03e17feed9a3455d4901efb4828cb1cd74a0a445046e159d0a097cf211c.json  query-b08d0c069623ccb226aaac8c287490a4baa9ae28365cd26e9d58dcb52c83557a.json  query-b8f418e5ab571335d088194e4202c312bda11bcd1404b7b33f9875788095a3bd.json  query-fc3245054a8008ac199e5685177c51aa3c211f4d5d3f6407f38505b5ede09f47.json  query-ffbe1bb2053d1a9daab56a41d0c39eed1b1c818cd16b71f4a0e83a0fdef12d96.json
Gabage/domain/src/: models.rs
Gabage/message_sender/src/: lib.rs
Gabage/repository/src/: lib.rs  test_utils.rs
Gabage/repository/src/postgres_guild_repository/: tests.rs
Gabage/shuttle/: Cargo.toml
Gabage/shuttle/src/: commands.rs  main.rs
api/db/: schema.sql
api/shuttle/: Cargo.toml
api/shuttle/src/: commands.rs  main.rs  models.rs  webhook_creator.rs  webhook_name.rs
api/shuttle/src/models/: data.rs  error.rs
core/db/: schema.sql
core/shuttle/: Cargo.toml
core/shuttle/src/: hub.rs  main.rs  queue.rs  ubiquitimes_user_name.rs
discord/: Cargo.toml
discord/src/: command.rs  lib.rs  publisher.rs  repository.rs
discord/src/publisher/: command.rs
domain/: Cargo.toml
domain/src/: lib.rs  message_sender.rs  repository.rs  ubiquitimes_user_name.rs  ubiquitimes_webhook_name.rs
lib/: Cargo.toml
lib/src/: lib.rs  repository.rs
lib/src/repository/: guild_repository.rs  times_repository.rs
message_sender/: Cargo.toml
message_sender/src/: lib.rs  poise_webhook_message_sender.rs  traits.rs
repository/: Cargo.toml
repository/src/: lib.rs  postgres_guild_repository.rs  postgres_times_repository.rs  read.rs  shuttle_times_repository.rs  test_util.rs  test_utils.rs  traits.rs
repository/src/postgres_guild_repository/: tests.rs
repository/src/postgres_times_repository/: tests.rs
repository/src/util/: discord.rs
repository/src/write/: discord.rs
repository/src/write/discord/: user.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
share/: Cargo.toml
share/src/: lib.rs  model.rs  oen_time_token.rs  one_time_token.rs  test_util.rs  util.rs
slack/: Cargo.toml
slack/src/: lib.rs
webhook_driver/: Cargo.toml
