[workspace.package]
name = "ubiquitimes-cardiac"
version = "0.1.0"
edition = "2021"
authors = ["neruneruna7"]
description = """
Times(ソフトウェアエンジニア系のコミュニティにおいてよくある，内部Twitterのようなものだと思っている．由来は知らない)に書き込んだ内容を，他のDiscordサーバーにも同時に書き込むBot．
"""
publish = false


[workspace]
resolver = "2"
members = [
    "core/shuttle", 
    "discord", "repository", "sandbox", "share", 
    "slack", 
]

[workspace.dependencies]
anyhow = "1.0.68"
shuttle-runtime = "0.46.0"
# Since poise is a serenity command framework, it can run on Shuttle with shuttle-serenity
shuttle-serenity = "0.46.0"
shuttle-shared-db = { version = "0.46.0", features = ["postgres", "sqlx"] }
sqlx = {version = "*", features = ["bigdecimal", "postgres"] }
tracing = "0.1.37"
tokio = "1.26.0"
rand = "*"
serde = "*"
poise = "*"

thiserror = "1.0"

jsonwebtoken = "*"
time = "*"

testcontainers = {version = "0.18.0", features = []}
testcontainers-modules = {version = "0.6.1", features = ["postgres",]}
