[package]
name="discord"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
shuttle-serenity.workspace = true
poise.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sqlx =  {workspace = true, features = ["bigdecimal", "postgres"]}
tokio.workspace = true

share = {path = "../share"}