[package]
name = "message_sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "*"

# # これめんどいなというか，好ましくないな
# # なるほど，Domainとやらに切り出すのはそういうわけか...
# repository = {path = "../repository"}

domain = {path = "../domain"}