[package]
name = "repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "*", features = ["bigdecimal", "postgres"] }
num-bigint = "0.4"
tracing = "0.1.37"
tokio = "*"
dotenvy = "*"
thiserror = "1.0"

domain = { path = "../domain" }

# # テスト時のみの依存関係
# [dev-dependencies]
# Shuttleへのデプロイがクラッシュするので，常時依存にしている
rand = "0.8"
testcontainers = {version = "0.17.0", features = ["blocking"]}
testcontainers-modules = {version = "0.5.0", features = ["postgres", "blocking"]}
once_cell = "1.19.0"
