[package]
name="repository"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sqlx =  {workspace = true, features = ["bigdecimal", "postgres"]}
tokio.workspace = true
rand.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true

share = {path = "../share"}