[package]
name = "ubiquitimes-cardiac"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.6.1"
shuttle-runtime = "0.42.0"
# shuttle-secrets = "0.41.0"
# Since poise is a serenity command framework, it can run on Shuttle with shuttle-serenity
shuttle-serenity = "0.42.0"
shuttle-shared-db = { version = "0.42.0", features = ["postgres", "sqlx"] }
sqlx = "0.7.3"


thiserror = "1.0"

domain = { path = "../../domain"}
repository ={ path = "../../repository"}
message_sender = { path = "../../message_sender"}
