[package]
name = "shuttle"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
shuttle-runtime = "0.46.0"
# Since poise is a serenity command framework, it can run on Shuttle with shuttle-serenity
shuttle-serenity = "0.46.0"
shuttle-shared-db = { version = "0.46.0", features = ["postgres", "sqlx"] }
sqlx = {version = "*", features = ["bigdecimal", "postgres"] }
tracing = "0.1.37"
tokio = "1.26.0"


thiserror = "1.0"

discord = {path = "../../discord"}
slack = {path = "../../slack"}
