[package]
name = "shuttle"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
shuttle-runtime.workspace = true
# Since poise is a serenity command framework, it can run on Shuttle with shuttle-serenity
shuttle-serenity.workspace = true
shuttle-shared-db = { workspase = true, features = ["postgres", "sqlx"] }
sqlx = {workspase = true, features = ["bigdecimal", "postgres"] }
tracing.workspace = true
tokio.workspace = true
poise.workspace = true


thiserror.workspase = true

discord = {path = "../../discord"}
slack = {path = "../../slack"}
